// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DesktopLayout /> should handle Layout props 1`] = `
<DesktopLayout>
  <Layout
    lgMaxWidth="md"
    mdPadding="lg"
    xlMaxWidth="lg"
  >
    <div
      className="layout-wrapper layout-xxl-padding-sm layout-xl-padding-sm layout-lg-padding-sm layout-md-padding-lg layout-sm-padding-lg layout-xs-padding-lg layout-xxs-padding-lg layout-xxxs-padding-lg"
    >
      <div
        className="layout layout-xxl-width-xl layout-xl-width-lg layout-lg-width-md layout-md-width-md layout-sm-width-md layout-xs-width-md layout-xxs-width-md layout-xxxs-width-md"
      >
        <div>
          Foo
        </div>
        <div>
          Bar
        </div>
        <div>
          Baz
        </div>
      </div>
    </div>
  </Layout>
</DesktopLayout>
`;

exports[`<DesktopLayout /> should renders without props 1`] = `
<DesktopLayout>
  <Layout
    lgMaxWidth="md"
    mdPadding="lg"
    xlMaxWidth="lg"
  >
    <div
      className="layout-wrapper layout-xxl-padding-sm layout-xl-padding-sm layout-lg-padding-sm layout-md-padding-lg layout-sm-padding-lg layout-xs-padding-lg layout-xxs-padding-lg layout-xxxs-padding-lg"
    >
      <div
        className="layout layout-xxl-width-xl layout-xl-width-lg layout-lg-width-md layout-md-width-md layout-sm-width-md layout-xs-width-md layout-xxs-width-md layout-xxxs-width-md"
      />
    </div>
  </Layout>
</DesktopLayout>
`;
